Renamed example files.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Jungle Japes Traphouse
+author=TheKlodster  
 support=
-description=An example greeter plugin
+description=Sound effect played upon player stepping on a banana peel.
 tags=
 plugins=com.example.ExamplePlugin
