Added play sound and sound effect.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Jungle Japes Traphouse
+displayName=Jungle Japes Buff
 author=TheKlodster  
-support=
+support=https://github.com/TheKlodster/Tombs-of-Amascut-Jungle-Japes/issues
 description=Sound effect played upon player stepping on a banana peel.
-tags=
-plugins=com.example.ExamplePlugin
+tags=toa, junglejapes, jungle japes, jungle
+plugins=com.junglejapes.JungleJapesLauncher
