--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Jungle Japes Buff
+displayName=Jungle Japes Indicator
 author=TheKlodster  
-support=https://github.com/TheKlodster/Tombs-of-Amascut-Jungle-Japes/issues
-description=Sound effect played upon player stepping on a banana peel.
-tags=toa, junglejapes, jungle japes, jungle
+support=https://github.com/TheKlodster/jungle-japes-banana-indicator/issues
+description=Sound effect played to indicate the banana peels spawning after death of a baboon, and a brutal sound effect played after a player steps on a banana peel.
+tags=toa, junglejapes, jungle japes, jungle, banana
 plugins=com.junglejapes.JungleJapesLauncher
