--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Jungle Japes Indicator
 author=TheKlodster  
 support=https://github.com/TheKlodster/jungle-japes-banana-indicator/issues
 description=Sound effect played to indicate the banana peels spawning after death of a baboon, and a brutal sound effect played after a player steps on a banana peel.
-tags=toa, junglejapes, jungle japes, jungle, banana
-plugins=com.junglejapes.JungleJapesLauncher
+tags=toa, junglejapes, jungle japes, jungle, banana, jungle japes indicator, junglejapesindicator, klod, theklodster
+plugins=com.junglejapes.JungleJapesPlugin
