--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=TheKlodster
 support=https://github.com/TheKlodster/jungle-japes-banana-indicator/issues
 description=Sound effect played to indicate the banana peels spawning after death of a baboon, and a brutal sound effect played after a player steps on a banana peel.
 tags=toa, junglejapes, jungle japes, jungle, banana, jungle japes indicator, junglejapesindicator, klod, theklodster
-plugins=com.junglejapes.JungleJapesPlugin
+plugins=com.code.JungleJapesPlugin
