--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 plugins {
 	id 'java'
-	id "com.github.johnrengelman.shadow" version "6.1.0"
+	//id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
-shadowJar {
-	from sourceSets.test.output
-	configurations = [project.configurations.testRuntimeClasspath]
-	manifest {
-		attributes "Main-Class": "com.code.JungleJapesLauncher"
-	}
-}
+//shadowJar {
+//	from sourceSets.test.output
+//	configurations = [project.configurations.testRuntimeClasspath]
+//	manifest {
+//		attributes "Main-Class": "com.code.JungleJapesLauncher"
+//	}
+//}
 
 repositories {
 	mavenLocal()
